[project]
name = "DataScience_Machine-Learning"
version = "0.1.0"
description = "Projet Data Science / Machine Learning"
requires-python = ">=3.12"

dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"